--- a/package.json
+++ b/package.json
@@ -39,15 +39,17 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "bootstrap-input-spinner": "^1.11.8",
     "bower": "^1.8.2",
     "del": "^3.0.0",
+    "gulp-imagemin": "^3.4.0",
     "gulp-include": "^2.3.1",
     "gulp-rename": "^1.2.2",
     "handlebars": "^4.0.10",
     "jquery": "^3.2.1",
     "mappy-breakpoints": "^0.2.3",
     "popper.js": "^1.12.5",
-    "gulp-imagemin": "^3.4.0",
-    "sass": "^1.0.0-beta.2"
+    "sass": "^1.0.0-beta.2",
+    "slick-carousel": "^1.8.1"
   }
 }
